@@ -15,6 +15,7 @@
     give errors accessing directories
     verbose tar extract/create
     fix for urxvtc #106
+    check non-zero size before thumbnail scale (pixbuf in #107)
 0.7.8   2012-06-16:
     use/update mimeapps.list over defaults.list closes #71
     added design mode on mime apps opens MIME menu
